[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/MovableEntity/MovableEntity.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="MovableEntity" type="Area2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, 8 )
shape = SubResource( 1 )

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 3
collide_with_areas = true

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 16, 8 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 3
collide_with_areas = true

[node name="RayUp" type="RayCast2D" parent="."]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 0, -5 )
collision_mask = 3
collide_with_areas = true

[node name="RayDown" type="RayCast2D" parent="."]
position = Vector2( 8, 16 )
enabled = true
cast_to = Vector2( 0, 5 )
collision_mask = 3
collide_with_areas = true
